--- a/.github/workflows/ibm-cf-v2.yml
+++ b/.github/workflows/ibm-cf-v2.yml
@@ -7,7 +7,7 @@
 # See /LICENSE for more information.
 #
 
-name: IBM Cloud Foundry - V2Ray
+name: IBM Cloud Foundry - Xray
 
 env:
   IBM_CF_API: https://api.us-south.cf.cloud.ibm.com
@@ -50,17 +50,17 @@ jobs:
           -o "${IBM_CF_ORG_NAME:-$IBM_CF_USERNAME}" \
           -s "${IBM_CF_SPACE_NAME:-dev}"
 
-    - name: Download Latest V2Ray
+    - name: Download Latest Xray
       run: |
-        DOWNLOAD_URL="https://github.com/v2fly/v2ray-core/releases/latest/download/v2ray-linux-64.zip"
-        curl -fsSL "$DOWNLOAD_URL" -o "latest-v2ray.zip"
-        unzip latest-v2ray.zip v2ray v2ctl geoip.dat geosite.dat
-        rm latest-v2ray.zip
+        DOWNLOAD_URL="https://github.com/XTLS/Xray-core/releases/latest/download/xray-linux-64.zip"
+        curl -fsSL "$DOWNLOAD_URL" -o "latest-Xray.zip"
+        unzip latest-Xray.zip xray geoip.dat geosite.dat
+        rm latest-Xray.zip
         chmod -v 755 v2*
-        ./v2ray -version
-        mv v2ray ${IBM_CF_APP_NAME}
+        ./Xray -version
+        mv Xray ${IBM_CF_APP_NAME}
 
-    - name: Generate V2Ray Config File (VMess)
+    - name: Generate Xray Config File (VMess)
       if: ${{ env.V2_WS_PATH_VMESS }}
       run: |
         base64 << P3TERX > config
@@ -97,7 +97,7 @@ jobs:
         }
         P3TERX
 
-    - name: Generate V2Ray Config File (VLESS)
+    - name: Generate Xray Config File (VLESS)
       if: ${{ env.V2_WS_PATH_VLESS }}
       run: |
         base64 << P3TERX > config
