--- a/.github/workflows/ibm-cf-v2.yml
+++ b/.github/workflows/ibm-cf-v2.yml
@@ -56,8 +56,8 @@ jobs:
         curl -fsSL "$DOWNLOAD_URL" -o "latest-Xray.zip"
         unzip latest-Xray.zip xray geoip.dat geosite.dat
         rm latest-Xray.zip
-        chmod -v 755 v2*
-        ./Xray -version
+        chmod -v 755
+        ./xray -version
         mv xray ${IBM_CF_APP_NAME}
 
     - name: Generate Xray Config File (VMess)
